// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keyValueTokenizer should tokenize with whitespace around value 1`] = `
Object {
  "endIdx": 7,
  "startIdx": 0,
  "type": "KeyValue",
  "value": "Test",
}
`;

exports[`keyValueTokenizer should tokenize without whitespace 1`] = `
Object {
  "endIdx": 7,
  "startIdx": 0,
  "type": "KeyValue",
  "value": "Test_1",
}
`;
